@@ -16,6 +16,13 @@
  */
 package org.operaton.bpm.example.invoice;
 
+import java.io.InputStream;
+import java.util.Calendar;
+import java.util.List;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import org.operaton.bpm.application.ProcessApplicationReference;
 import org.operaton.bpm.engine.ProcessEngine;
 import org.operaton.bpm.engine.RepositoryService;
@@ -27,17 +34,13 @@ import org.operaton.bpm.engine.repository.ProcessDefinition;
 import org.operaton.bpm.engine.repository.ProcessDefinitionQuery;
 import org.operaton.bpm.engine.runtime.ProcessInstance;
 import org.operaton.bpm.engine.task.Task;
+
 import static org.operaton.bpm.engine.variable.Variables.createVariables;
 import static org.operaton.bpm.engine.variable.Variables.fileValue;
 
-import java.io.InputStream;
-import java.util.Arrays;
-import java.util.Calendar;
-import java.util.logging.Logger;
+public final class InvoiceApplicationHelper {
 
-public class InvoiceApplicationHelper {
-
-  private static final Logger LOGGER = Logger.getLogger(InvoiceApplicationHelper.class.getName());
+  private static final Logger LOGGER = LoggerFactory.getLogger(InvoiceApplicationHelper.class);
 
   private static final String PROCDEFKEY_INVOICE = "invoice";
   private static final String RESOURCE_INVOICE_PDF = "invoice.pdf";
@@ -47,6 +50,7 @@ public class InvoiceApplicationHelper {
   private static final String VAR_INVOICE_CATEGORY = "invoiceCategory";
   private static final String VAR_INVOICE_NUMBER = "invoiceNumber";
   private static final String VAR_INVOICE_DOCUMENT = "invoiceDocument";
+  public static final String MIME_TYPE_APPLICATION_PDF = "application/pdf";
 
   private InvoiceApplicationHelper() {
   }
@@ -59,21 +63,21 @@ public class InvoiceApplicationHelper {
     processEngineConfiguration.setDbMetricsReporterActivate(true);
     processEngineConfiguration.getDbMetricsReporter().setReporterId("REPORTER");
 
-    startProcessInstances(processEngine, PROCDEFKEY_INVOICE, 1);
-    startProcessInstances(processEngine, PROCDEFKEY_INVOICE, null);
+    startInvoiceProcessInstances(processEngine, 1);
+    startInvoiceProcessInstances(processEngine, null);
 
     //disable reporting
     processEngineConfiguration.setDbMetricsReporterActivate(false);
   }
 
-  public static void createDeployment(String processArchiveName, ProcessEngine processEngine, ClassLoader classLoader, ProcessApplicationReference applicationReference) {
+  public static void createDeployment(ProcessEngine processEngine, ClassLoader classLoader, ProcessApplicationReference applicationReference) {
     // Hack: deploy the first version of the invoice process once before the process application
     //   is deployed the first time
     if (processEngine != null) {
 
       RepositoryService repositoryService = processEngine.getRepositoryService();
 
-      if (!isProcessDeployed(repositoryService, PROCDEFKEY_INVOICE)) {
+      if (!isInvoiceProcessDeployed(repositoryService)) {
         repositoryService.createDeployment(applicationReference)
           .addInputStream("invoice.v1.bpmn", classLoader.getResourceAsStream("invoice.v1.bpmn"))
           .addInputStream("invoiceBusinessDecisions.dmn", classLoader.getResourceAsStream("invoiceBusinessDecisions.dmn"))
@@ -83,17 +87,17 @@ public class InvoiceApplicationHelper {
     }
   }
 
-  protected static boolean isProcessDeployed(RepositoryService repositoryService, String key) {
+  private static boolean isInvoiceProcessDeployed(RepositoryService repositoryService) {
     return repositoryService.createProcessDefinitionQuery().processDefinitionKey(PROCDEFKEY_INVOICE).count() > 0;
   }
 
-  protected static void startProcessInstances(ProcessEngine processEngine, String processDefinitionKey, Integer version) {
+  private static void startInvoiceProcessInstances(ProcessEngine processEngine, Integer version) {
 
     ProcessEngineConfigurationImpl processEngineConfiguration = (ProcessEngineConfigurationImpl) processEngine.getProcessEngineConfiguration();
     ProcessDefinitionQuery processDefinitionQuery = processEngine
       .getRepositoryService()
       .createProcessDefinitionQuery()
-      .processDefinitionKey(processDefinitionKey);
+      .processDefinitionKey(PROCDEFKEY_INVOICE);
 
     if (version != null) {
       processDefinitionQuery.processDefinitionVersion(version);
@@ -111,7 +115,7 @@ public class InvoiceApplicationHelper {
 
     if (numberOfRunningProcessInstances == 0) { // start three process instances
 
-      LOGGER.info("Start 3 instances of " + processDefinition.getName() + ", version " + processDefinition.getVersion());
+      LOGGER.info("Start 3 instances of {}, version {}", processDefinition.getName(), processDefinition.getVersion());
       // process instance 1
       processEngine.getRuntimeService().startProcessInstanceById(processDefinition.getId(), createVariables()
           .putValue(VAR_CREDITOR, "Great Pizza for Everyone Inc.")
@@ -120,7 +124,7 @@ public class InvoiceApplicationHelper {
           .putValue(VAR_INVOICE_NUMBER, "GPFE-23232323")
           .putValue(VAR_INVOICE_DOCUMENT, fileValue(RESOURCE_INVOICE_PDF)
               .file(invoiceInputStream)
-              .mimeType("application/pdf")
+              .mimeType(MIME_TYPE_APPLICATION_PDF)
               .create()));
 
       IoUtil.closeSilently(invoiceInputStream);
@@ -140,14 +144,14 @@ public class InvoiceApplicationHelper {
             .putValue(VAR_INVOICE_NUMBER, "BOS-43934")
             .putValue(VAR_INVOICE_DOCUMENT, fileValue(RESOURCE_INVOICE_PDF)
                 .file(invoiceInputStream)
-                .mimeType("application/pdf")
+                .mimeType(MIME_TYPE_APPLICATION_PDF)
                 .create()));
 
         processEngineConfiguration.getDbMetricsReporter().reportNow();
         calendar.add(Calendar.DAY_OF_MONTH, 14);
         ClockUtil.setCurrentTime(calendar.getTime());
 
-        processEngine.getIdentityService().setAuthentication("demo", Arrays.asList(Groups.OPERATON_ADMIN));
+        processEngine.getIdentityService().setAuthentication("demo", List.of(Groups.OPERATON_ADMIN));
         Task task = processEngine.getTaskService().createTaskQuery().processInstanceId(pi.getId()).singleResult();
         processEngine.getTaskService().claim(task.getId(), "demo");
         processEngine.getTaskService().complete(task.getId(), createVariables().putValue("approved", true));
@@ -174,7 +178,7 @@ public class InvoiceApplicationHelper {
             .putValue(VAR_INVOICE_NUMBER, "PSACE-5342")
             .putValue(VAR_INVOICE_DOCUMENT, fileValue(RESOURCE_INVOICE_PDF)
                 .file(invoiceInputStream)
-                .mimeType("application/pdf")
+                .mimeType(MIME_TYPE_APPLICATION_PDF)
                 .create()));
 
         processEngineConfiguration.getDbMetricsReporter().reportNow();
@@ -192,14 +196,12 @@ public class InvoiceApplicationHelper {
         processEngine.getIdentityService().clearAuthentication();
       }
     } else {
-      LOGGER.info("No new instances of " + processDefinition.getName()
-          + " version " + processDefinition.getVersion()
-          + " started, there are " + numberOfRunningProcessInstances + " instances running");
+      LOGGER.info("No new instances of {} version {} started, there are {} instances running",
+          processDefinition.getName(), processDefinition.getVersion(), numberOfRunningProcessInstances);
     }
   }
 
-  protected static void createUsers(ProcessEngine processEngine) {
-
+  private static void createUsers(ProcessEngine processEngine) {
     // create demo users
     new DemoDataGenerator().createUsers(processEngine);
   }
